<resources>
    <string name="app_name">DULIBU</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_manager">ProfileManagerActivity</string>
    <string name="title_activity_register_manager">Đăng ký</string>
    <string name="title_activity_trip_detail_manager">Chi tiết chuyến đi</string>
    <string name="title_activity_trip_detail_info">TripDetailInfoActivity</string>
    <string name="title_activity_trip_detail_member">TripDetailMemberActivity</string>
    <string name="title_activity_trip_detail_message">TripDetailMessageActivity</string>
    <string name="title_activity_trip_detail_trip">TripDetailTripActivity</string>
    <string name="title_activity_chi_tieu_">Chi tiết kinh phí</string>
    <string name="title_activity_change_pass">Đổi mật khẩu</string>
    <string name="txtConDu">Số tiền còn dư </string>
    <string name="txtTongThu">Tổng thu</string>
    <string name="txtChiTiet">Chi tiết</string>
    <string name="title_activity_phuot_detail_manager">Chi tiết điểm phượt</string>
    <string name="title_activity_phuot_detail_overview">PhuotDetailOverview</string>
    <string name="title_activity_phuot_detail_comment">PhuotDetailComment</string>
    <string name="MCC_note">Mù Cang Chải là 1 huyện vùng cao của tỉnh Yên Bái, cách Hà Nội khoảng 280 Km, nổi tiếng với danh thắng ruộng bậc thang</string>
    <string name="validator_login">Thiếu tên đăng nhập hoặc mật khẩu</string>
    <string name="login_fail">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="title_fogot_dialog">Quên mật khẩu</string>
    <string name="login_again">Đăng nhập lại!</string>
    <string name="action_login">Đăng nhập</string>
    <string name="edit_profile_actionbar"></string>
    <string name="iamfine">An toàn</string>
    <string name="iamnotgood">Nguy hiểm</string>
    <string name="done_profile_actionbar"></string>
    <string name="update_ava_success">Avatar đã được cập nhật</string>
    <string name="update_ava_false">Cập nhật avatar thất bại</string>
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="change_succes">Đổi mật khẩu thành công</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="check_new_pass">Nhập lại mật khẩu mới</string>
    <string name="save_new_pass">Đổi mật khẩu</string>
    <string name="success">Thành công</string>
    <string name="successRegis">Đăng ký thành công !</string>
    <string name="create_success">Thông tin đã được gửi tới email của bạn, Vui lòng kiểm tra email !</string>
    <string name="ConfirmFalse">Thất bại</string>
    <string name="create_false">Không thể gửi thông tin tới server !</string>
    <string name="app_name_tt">Dulibu</string>
    <string name="madeBy">Thiết kế &amp; Phát triển bởi</string>
    <string name="developed_by">DULIBU TEAM</string>
    <string name="tv_version">Phiên bản</string>
    <string name="tvcontact">Liên lạc</string>
    <string name="contactInfo">Email: h2p.groups@gmail.com</string>
    <string name="nhaTaiTro">Huawei</string>
    <string name="version_number">1.0</string>
    <string name="tvDescription">Mô tả</string>
    <string name="tvTermsOfService">Điều khoản sử dụng</string>
    <string name="description">Sản phẩm tham gia Cuộc thi Sáng tạo Ứng dụng Di động 2015 do Huawei và Hội Tin học Việt Nam cùng VNG tổ chức.</string>
    <string name="title_activity_trip_detail_manager_for_user">Chi tiết lịch trình</string>
    <string name="save_trip"></string>
    <string name="actionSave">Trip được thêm vào ưu thích</string>
    <string name="actionUndoSave">Trip được loại khỏi ưu thích</string>
    <string name="sendMessage">Gửi</string>
    <string name="titleOfflineDialog">Tạo mới sự kiện</string>
    <string name="Safe">An toàn</string>
    <string name="Lost">Mất tích</string>
    <string name="titleChiPhiDialog">Thêm chi phí</string>
    <string name="hintTenMucChi">Tên mục chi</string>
    <string name="hintSoTienChi">Số tiền chi</string>
    <string name="tvNgonNgu">Ngôn ngữ</string>
    <string name="tvDanhSachNguoiNhan">Danh sách người thân</string>
    <string name="title_activity_setting">Cài đặt</string>
    <string name="tvAccount">Tài khoản</string>
    <string name="tvChangePassword">Đổi mật khẩu</string>
    <string name="tvAbout">Thông tin ứng dụng</string>
    <string name="tvAboutTermsOfServices">Điều khoản sử dụng</string>
    <string name="tvMap">Bản đồ</string>
    <string name="tvMapChange">Đổi kiểu bản đồ</string>
    <string name="tvDieuKhoan">Điều khoản sử dụng</string>
    <string name="tvStatus">An toàn</string>
    <string name="titleStatus">Trạng thái</string>
    <string name="inDanger">Gặp nguy hiểm</string>
    <string name="tvChangeStatus">Cảnh báo trạng thái?</string>
    <string name="tvLastLocation">Vị trí cuối cùng</string>
    <string name="tvListConfirm">Danh sách cảnh báo</string>
    <string name="title_activity_user_secure_confirm">Cảnh báo thành viên mất tích</string>
    <string name="title_activity_create_trip_manager">Tạo lịch trình</string>
    <string name="name_trip">Tên chuyến đi</string>
    <string name="startDay">Ngày đi</string>
    <string name="endDay">Ngày về</string>
    <string name="startTime">Giờ đi</string>
    <string name="endTime">Giờ về</string>
    <string name="chiphi">Kinh phí dự kiến</string>
    <string name="chooseTrip">Lịch trình</string>
    <string name="create_trip">Tạo lịch trình</string>
    <string name="search_trip">Tìm kiếm</string>
    <string name="fomatDate">yyyy-mm-dd</string>
    <string name="fomatTime">00:00</string>
    <string name="chooseImage">Chọn ảnh</string>
    <string name="create_place">Chọn địa điểm</string>
    <string name="suggest_place">Gợi ý lịch trình</string>
    <string name="offline">offline</string>
    <string name="timeOff">Thời gian</string>
    <string name="dateOff">Ngày</string>
    <string name="place_off">Địa điểm</string>
    <string name="place_start">Khởi hành</string>
    <string name="comment">BÌNH LUẬN</string>
    <string name="deital_info">THÔNG TIN CHI TIẾT</string>
    <string name="note">Ghi chú</string>
    <string name="creatTrip">Lưu</string>
    <string name="maps_actionbar">Map</string>
    <string name="messages_actionbar">Tin nhắn</string>
    <string name="title_activity_offline_">Sự kiện</string>
    <string name="title_activity_list__sukien_">List_Sukien_Activity</string>
    <string name="textHintTitleTrip">Đặt tên chuyến đi</string>
    <string name="textHintDayStart">Thời gian bắt đầu</string>
    <string name="textHintDayEnd">Thời gian kết thúc</string>
    <string name="forget_pass">Quên mật khẩu?</string>
    <string name="checknull">Thông tin không được để trống!</string>
    <string name="textHintKinhPhi">Kinh phí</string>
    <string name="textHintPlaceStart">Điểm xuất phát</string>
    <string name="textHintTimeStart">Thời gian tập trung</string>
    <string name="btnDoneCreateTripTimePicker">Xong</string>
    <string name="btnCancelCreateTripTimePicker">Quay lại</string>
    <string name="titleSetTime">00:00</string>
    <string name="titleTimeDialog">Đặt thời gian</string>
    <string name="str_ten">Tên</string>
    <string name="str_tg">THỜI GIAN</string>
    <string name="str_bando">Bản đồ</string>
    <string name="str_tensukien">Tên sự kiện</string>
    <string name="str_thoigian">Thời gian cụ thể </string>
    <string name="str_sotien">Số tiền </string>
    <string name="str_diadiem">Địa điểm </string>
    <string name="str_dieukhoan">ĐIỀU KHOẢN SỬ DỤNG </string>
    <string name="str_dieukhoan1">\t Vui lòng đọc kĩ các thỏa thuận sử dụng này trước khi tiến hành tải, cài đặt, đăng ký tài khoản và sử dụng “DULIBU”. Bạn chấp thuận và đồng ý xác nhận bị ràng buộc bởi các điều khoản dưới đây khi sử dụng. Nếu trường hợp bạn không đồng ý với bất cứ điều khoản sử dụng nào của chúng tôi, làm ơn vui lòng không cài đặt, sử dụng, đăng ký ứng dụng trên thiết bị di động của bạn: </string>
    <string name="str_dieukhoan2">Điều 1: Quyền riêng tư </string>
    <string name="str_dieukhoan3">\tCác thông tin khai báo của bạn rất quan trọng với DULIBU, mọi quyền lợi và nghĩa vụ đều căn cứ vào những điều khoản mà bạn đăng ký. Do đó bất cứ thông tin sai lệch khi khai báo chúng tôi sẽ không chịu trách nhiệm nếu nó ảnh hưởng đến quyền lợi cá nhân của bạn. Các thông tin khai báo đều được giữ bảo mật và an toàn, chúng chỉ được công khai dưới sự cho phép của chủ thể cũng nhưng những trường hợp cần thiết ảnh hưởng đến chủ thể.</string>
    <string name="str_dieukhoan4">Điều 2: Cập nhật </string>
    <string name="str_dieukhoan5">\t Các điều khoản có thể được chúng tôi cập nhật thường xuyên, có thể thay thế 1 vài nội dung ban đầu. Bạn có thể truy cập ứng dụng để theo dõi những thay đổi này.</string>
    <string name="str_dieukhoan6">Điều 3: Quyền sở hữu </string>
    <string name="str_dieukhoan7">\t Ứng dụng này thuộc quyền sở hữu trí tuệ của DULIBU  TEAM, tất cả các ứng dụng (bao gồm mã nguồn, hình ảnh, dữ liệu, các sửa đổi, bổ sung, cập nhật phần mềm,…) và các tài liệu liên quan (nếu có) sẽ không được bất cứ cá nhân (hay tổ chức) sao chép, tái tạo, phân phối, hoặc hình thức xâm phạm khác liên quan tới bản quyền nếu chưa có sự cho phép của chúng tôi.</string>
    <string name="str_dieukhoan8">Điều 4: Tài khoản</string>
    <string name="str_dieukhoan9">\t Bạn có toàn quyền sử dụng DULIBU, cũng như các ứng dụng mà chúng tôi cung cấp. Tuy nhiên, chúng sẽ không bao gồm các hành vi dưới đây nếu không có sự đồng ý của chúng tôi: 
\n_ Sử dụng, sao chép ứng dụng để tạo ra một sản phẩm mới.
\n_ Sử dụng dịch vụ với mục đích thương mại với bên thứ ba.
\n_ Hủy bỏ, sửa chữa so với trạng thái ban đầu của ứng dụng.
\n_ Sử dụng với mục đích tuyên truyền các thông tin vi phạm pháp luật, vi phạm thuần phong mĩ tục.
\n_ Các hình thức vi phạm khác.</string>
    <string name="str_dieukhoan10">Điều 5: Xử lý vi phạm</string>
    <string name="str_dieukhoan11">\t Mọi hành vi vi phạm đến các điều khoản trên nếu bị phát hiện, tài khoản lập tức bị khóa lại. Tùy theo mức độ cũng như hình thức vi phạm, chúng tôi sẽ đưa ra hình phạt thích đáng.</string>
    <string name="startPlace">Điểm đầu</string>
    <string name="endPlace">Điểm cuối</string>
    <string name="city_prompt">Chọn địa điểm</string>
    <string name="hintDialogForgetPass">Mật khẩu mới sẽ được gửi vào email của bạn \nVui lòng nhập Email !</string>
    <string name="hintDialogActive">Mã xác nhận</string>
    <string name="newpass">Mật khẩu mới</string>
    <string name="renewpass">Nhập lại mật khẩu mới</string>
    <string name="hintDialogForget">Email</string>
    <string name="btnActiveRegister">Xác nhận</string>
    <string name="btnCancelActiveRegister">Thoát</string>
    <string name="DoneActive">Xác nhận thành công!</string>
    <string name="FailActive">Mã xác nhận không đúng, vui lòng thử lại!</string>
    <string name="Hanoi">Hà Nội</string>
    <string name="Hagiang">Hà Giang</string>
</resources>