<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ActionBarColor"
        android:text="@string/str_dieukhoan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan1"
        android:textStyle="italic"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan2"
        android:textColor="#000000" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan3" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan4"
        android:textColor="#000000" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan5" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan6"
        android:textColor="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan7" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan8"
        android:textColor="#000000" />
    
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan9" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:text="@string/str_dieukhoan10"
        android:textColor="#000000" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="5sp"
        android:text="@string/str_dieukhoan11" />
    
    
</LinearLayout>
</ScrollView>