<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hou.fragment.ProfileFragment" >

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_applications_white_18dp"
        android:title="@string/maps_actionbar"
        app:showAsAction="always"/>
    <item
        android:id="@+id/messages"
        android:icon="@drawable/icon_message"
        android:title="@string/messages_actionbar"
        app:showAsAction="always"/>
    <item
        android:id="@+id/editting_actionbar"
        android:icon="@drawable/edit_actionbar"
        android:title="@string/edit_profile_actionbar"
        app:showAsAction="always"/>
    <item
        android:id="@+id/done_setting_actionbar"
        android:icon="@drawable/done_setting"
        android:title="@string/done_profile_actionbar"
        app:showAsAction="always"/>

</menu>