<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >
    <TextView 
        android:text="@string/titleDialogActive"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
	<EditText 
	    android:id="@+id/edActiveCode"
	    android:layout_margin="10dp"
	    android:hint="@string/hintDialogActive"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:weightSum="2">
	    <Button 
	        android:id="@+id/btnAcvtiveRegister"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	        android:text="@string/btnActiveRegister"/>
	    <Button 
	        android:id="@+id/btnCancelAcvtiveRegister"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	        android:text="@string/btnCancelActiveRegister"/>
	</LinearLayout>
</LinearLayout>
