<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/LnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/old_pass"
            android:textColor="#000" />

        <EditText
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/edittext_default_bg"
            android:inputType="text"
            android:padding="10dp"
            android:scrollbars=""
            android:textColorHint="#bbbbbb"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/new_pass"
            android:textColor="#000" />

        <EditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_default_bg"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/check_new_pass"
            android:textColor="#000" />

        <EditText
            android:id="@+id/edt_check_new_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_default_bg"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#bbbbbb"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btSavePassChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/save_new_pass" />
        
    </LinearLayout>
    
     

</ScrollView>