<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:weightSum="5">

        <EditText
            android:id="@+id/txtTenMucChi"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintTenMucChi"
            android:maxLines="1">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:weightSum="5">

        <EditText
            android:id="@+id/txtSoTien"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/hintSoTienChi"
            android:maxLines="1">

           
        </EditText>
    </TableRow>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnAdd"
            style="@style/DefaultButtonText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:background="@color/transparent"
            android:text="@string/btnDoneCreateTripTimePicker"
            android:textColor="@color/StatusBarColor"
            android:textStyle="bold" />
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/ActionBarColor"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            />

        <Button
            android:id="@+id/btnCancel"
            style="@style/DefaultButtonText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:background="@color/transparent"
            android:text="@string/btnCancelCreateTripTimePicker"
            android:textColor="@color/StatusBarColor"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>