<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtCodeConfirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edittext_default_bg"
        android:hint="@string/hintDialogActive"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtPasswordCf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-2dp"
        android:background="@drawable/edittext_default_bg"
        android:hint="@string/new_pass"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txtRePasswordCf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-2dp"
        android:background="@drawable/edittext_bottom_bg"
        android:hint="@string/renewpass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="#bbbbbb"
        android:textSize="14sp" />

</LinearLayout>